# apache

./: Apache_Datanoesis.h.in  CMakeLists.txt  DatanoesisHandler.h  DatanoesisHandler.hpp  Dockerfile  Makefile  builder-db.sh  builder.ps1  helper.h  logger.cpp  logger.h  logic.h  logic.hpp  main.cpp  mod_datanoesis.cpp  modules.mk  parser.hpp  soci-builder.ps1  tester.py
json/lib/: jsoncpp.lib
soci/: soci-config.h
soci/lib/: libsoci_empty_4_0.lib  libsoci_oracle_4_0.lib  soci_core_4_0.exp  soci_core_4_0.lib  soci_empty_4_0.exp  soci_empty_4_0.lib  soci_mysql_4_0.exp  soci_mysql_4_0.lib  soci_oracle_4_0.exp  soci_oracle_4_0.lib
